--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:id="@+id/drawerlayout"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
+
+   <com.google.android.material.navigation.NavigationView
+       android:layout_width="wrap_content"
+       android:layout_height="match_parent"
+      android:id="@+id/navigationview"
+      app:headerLayout="@layout/header"
+      app:menu="@menu/sidemenu"
+      android:layout_gravity="start">
+
+   </com.google.android.material.navigation.NavigationView>
+
+<!--   <ScrollView-->
+<!--       android:layout_width="match_parent"-->
+<!--       android:layout_height="match_parent">-->
+
+   <RelativeLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
 
 
-   <TextView
+   <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:id="@+id/mytext">
+      android:background="@color/teal_200"
+      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+       app:title="MVVM"
+       app:titleTextColor="@color/white"
+       android:layout_marginBottom="5dp"
+      app:titleMarginStart="10dp"
+       android:id="@+id/myToolBar"
+       tools:ignore="MissingConstraints"
+       />
 
-   </TextView>
 
 
-</RelativeLayout>
+      <RelativeLayout
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:layout_marginTop="?attr/actionBarSize"
+          android:layout_below="@+id/myToolBar"
+          >
+
+   <androidx.recyclerview.widget.RecyclerView
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:id="@+id/recyclerView"
+       tools:ignore="MissingConstraints">
+
+   </androidx.recyclerview.widget.RecyclerView>
+
+      </RelativeLayout>
+
+   </RelativeLayout>
+
+<!--   </ScrollView>-->
+
+
+</androidx.drawerlayout.widget.DrawerLayout>
