--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,60 +9,80 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
-   <com.google.android.material.navigation.NavigationView
-       android:layout_width="wrap_content"
-       android:layout_height="match_parent"
-      android:id="@+id/navigationview"
-      app:headerLayout="@layout/header"
-      app:menu="@menu/sidemenu"
-      android:layout_gravity="start">
 
-   </com.google.android.material.navigation.NavigationView>
+
 
 <!--   <ScrollView-->
 <!--       android:layout_width="match_parent"-->
 <!--       android:layout_height="match_parent">-->
 
-   <RelativeLayout
+   <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
 
 
-   <androidx.appcompat.widget.Toolbar
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-      android:background="@color/teal_200"
-      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-       app:title="MVVM"
-       app:titleTextColor="@color/white"
-       android:layout_marginBottom="5dp"
-      app:titleMarginStart="10dp"
-       android:id="@+id/myToolBar"
-       tools:ignore="MissingConstraints"
-       />
+      <androidx.appcompat.widget.Toolbar
+          android:id="@+id/myToolBar"
+          android:layout_width="match_parent"
+          android:layout_height="?attr/actionBarSize"
+          android:layout_marginBottom="5dp"
+          android:fitsSystemWindows="true"
+          android:minHeight="?attr/actionBarSize"
+          android:background="@color/teal_200"
+          android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+          app:title="MVVM"
+          app:titleMarginStart="10dp"
+          app:titleTextColor="@color/white"
+          tools:ignore="MissingConstraints" />
 
 
 
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-          android:layout_marginTop="?attr/actionBarSize"
           android:layout_below="@+id/myToolBar"
-          >
+          android:layout_marginTop="?attr/actionBarSize">
 
-   <androidx.recyclerview.widget.RecyclerView
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:id="@+id/recyclerView"
-       tools:ignore="MissingConstraints">
+         <include layout="@layout/fragment_home"
+            android:layout_width="match_parent"
+             android:layout_height="wrap_content">
 
-   </androidx.recyclerview.widget.RecyclerView>
+         </include>
+
+<!--         <androidx.recyclerview.widget.RecyclerView-->
+<!--             android:id="@+id/recyclerView"-->
+<!--             android:layout_width="match_parent"-->
+<!--             android:layout_height="wrap_content"-->
+<!--             tools:ignore="MissingConstraints">-->
+
+<!--         </androidx.recyclerview.widget.RecyclerView>-->
 
       </RelativeLayout>
 
-   </RelativeLayout>
+
+
+      <fragment
+          android:layout_width="match_parent"
+          android:layout_height="0dp"
+          app:layout_constraintTop_toBottomOf="@+id/myToolBar"
+          app:layout_constraintBottom_toBottomOf="parent"
+          android:id="@+id/navHostFragment"
+          android:name="androidx.navigation.fragment.NavHostFragment"
+          app:defaultNavHost="true"
+          app:navGraph="@navigation/navgraph"/>
+
+   </androidx.constraintlayout.widget.ConstraintLayout>
+
+   <com.google.android.material.navigation.NavigationView
+       android:layout_width="wrap_content"
+       android:layout_height="match_parent"
+       android:id="@+id/navigationview"
+       app:headerLayout="@layout/header"
+       app:menu="@menu/sidemenu"
+       android:layout_gravity="start">
+
+   </com.google.android.material.navigation.NavigationView>
 
 <!--   </ScrollView>-->
-
 
 </androidx.drawerlayout.widget.DrawerLayout>
